deploy/kubernetes/overlays/with-postgres/patch-deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voxscore-api
spec:
  template:
    spec:
